Fix: All DialPro issues resolved + Speaker/Earpiece toggle
- Fixed voicemail duplicate code in webhook
- Fixed SMS chat alignment (incoming=right, outgoing=left)
- Added voicemail duration display
- Added speaker/earpiece toggle for mobile users
- Enhanced dialer active call controls
- Removed secrets from repository
- Added .env.example files with placeholders
- Added SECURITY.md guide

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,30 +1,29 @@
 # MongoDB Configuration
-MONGO_URL=your_mongodb_connection_string
-DB_NAME=Dialpro1
+MONGO_URL=mongodb+srv://username:password@your-cluster.mongodb.net/?appName=YourApp
+DB_NAME=your_database_name
+
+# Backend URL (Update with your deployment URL)
+BACKEND_URL=https://your-backend-url.onrender.com
+
+# CORS Configuration (Update with your frontend URL)
+CORS_ORIGINS=https://your-frontend-url.vercel.app
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret_key
+JWT_SECRET=your_random_secret_key_here
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 REFRESH_TOKEN_EXPIRE_DAYS=7
 
-# Twilio Configuration
+# Twilio Configuration (Get from https://console.twilio.com)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_API_KEY=your_twilio_api_key
 TWILIO_API_KEY_SID=your_twilio_api_key_sid
 TWILIO_API_SECRET=your_twilio_api_secret
-TWILIO_API_KEY_SECRET=your_twilio_api_key_secret
-TWILIO_PHONE_NUMBER=your_twilio_phone_number
-TWILIO_TWIML_APP_SID=your_twilio_twiml_app_sid
-TWILIO_TWIML_URL=your_backend_url/api/webhooks/twiml
-TWILIO_VERIFY_SERVICE_SID=your_twilio_verify_service_sid
+TWILIO_PHONE_NUMBER=+1234567890
+TWILIO_TWIML_APP_SID=your_twiml_app_sid
+TWILIO_TWIML_URL=https://your-backend-url.onrender.com/api/webhooks/twiml
+TWILIO_VERIFY_SERVICE_SID=your_verify_service_sid
 
-# Backend URL
-BACKEND_URL=your_backend_url
-
-# CORS Configuration
-CORS_ORIGINS=your_frontend_url
-
-# Wallet Configuration
+# USDT Wallet (Optional)
 USDT_WALLET_ADDRESS=your_usdt_wallet_address
